commit for microservices

--- a/heima-leadnews-service/heima-leadnews-article/src/main/resources/bootstrap.yml
+++ b/heima-leadnews-service/heima-leadnews-article/src/main/resources/bootstrap.yml
@@ -1,4 +1,4 @@
- server:
+server:
   port: 51802
 spring:
   application:
@@ -10,3 +10,13 @@ spring:
       config:
         server-addr: 192.168.200.130:8848
         file-extension: yml
+  freemarker:
+    template-loader-path: classpath:\templates
+
+minio:
+  accessKey: minio
+  secretKey: minio123
+  bucket: leadnews
+  endpoint: http://172.17.2.60:9000
+  readPath: http://172.17.2.60:9000
+
