--- a/heima-leadnews-test/pom.xml
+++ b/heima-leadnews-test/pom.xml
@@ -15,6 +15,7 @@
         <module>freemarker-demo</module>
         <module>minio-demo</module>
         <module>kafka-demo</module>
+        <module>tess4j-demo</module>
     </modules>
 
     <properties>
