--- a/heima-leadnews-service/heima-leadnews-wemedia/pom.xml
+++ b/heima-leadnews-service/heima-leadnews-wemedia/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>heima-file-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.13.1</version>
+        </dependency>
     </dependencies>
 
 </project>
