--- a/heima-leadnews-test/tess4j-demo/pom.xml
+++ b/heima-leadnews-test/tess4j-demo/pom.xml
@@ -3,20 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>heima-leadnews</artifactId>
+        <artifactId>heima-leadnews-test</artifactId>
         <groupId>com.heima</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>heima-leadnews-test</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>freemarker-demo</module>
-        <module>minio-demo</module>
-        <module>kafka-demo</module>
-        <module>tess4j-demo</module>
-    </modules>
+    <artifactId>tess4j-demo</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
